# plantuml-compose

./: .gitignore  CLAUDE.md  PLANTUML_SYNTAX_REFERENCE.md  README.md  pyproject.toml  shell.nix
examples/: activity-diagrams.md  class-diagrams.md  component-diagrams.md  deployment-diagrams.md  gantt-diagrams.md  incus.py  mindmap-diagrams.md  mix.01  mix.02  network-diagrams.md  object-diagrams.md  salt-diagrams.md  sequence-diagrams.md  state-diagrams.md  subdiagrams.md  timing-diagrams.md  usecase-diagrams.md  wbs-diagrams.md
examples/base/: activity-diagrams.md  class-diagrams.md  (+13 more)
tests/: conftest.py  test_activity.py  test_arrow_length.py  test_class.py  test_codegen.py  test_common.py  test_component.py  test_composers_activity.py  test_composers_base.py  test_composers_class.py  test_composers_component.py  test_composers_deployment.py  test_composers_gantt.py  test_composers_integration.py  test_composers_json_yaml.py  test_composers_mindmap.py  test_composers_network.py  test_composers_object.py  test_composers_salt.py  test_composers_sequence.py  test_composers_state.py  test_composers_timing.py  test_composers_usecase.py  test_composers_wbs.py  test_custom_arrow_heads.py  test_deployment.py  test_diagram_style_integration.py  test_gantt.py  test_inherited_methods.py  test_json_yaml.py  test_mindmap.py  test_network.py  test_object.py  test_plantuml_limitations.py  test_primitive_fields.py  test_salt.py  test_sequence.py  test_sequence_boundary.py  test_state.py  test_state_feature_coverage.py  (+6 more)
tools/: generate-markdown.py  generate_docs.py  svg_utils.py
(+72 files in other folders)
