[project]
name = "plantuml-compose"
version = "1.0.1"
description = "A Python library that makes creating PlantUML diagrams intuitive via type hints"
readme = "README.md"
authors = [
    { name = "jealouscloud", email = "github@noaha.org" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
puml-md = "plantuml_compose.cli:markdown"
plantuml-compose = "plantuml_compose.cli:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
